fix 404 flickering on page load

--- a/src/style.css
+++ b/src/style.css
@@ -81,3 +81,21 @@ main {
 		background-color: #1a1a1a;
 	}
 }
+
+#fourohfour {
+	margin-top: 2rem;
+	opacity: 0;
+    animation: fadeInAnimation ease 0.5s;
+	animation-delay: 0.2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
